# jsonref-rs

./: Cargo.toml
fixtures/definitions/: base.json  expected.json  other.json
src/: lib.rs
